napravljena klasa i funkcija prijava koja se poziva na dogadjaj "prijavi" u mainwindowu, otvara meni i zatvara MW za sada

--- a/HotelManagementSystem/HotelManagementSystem.csproj
+++ b/HotelManagementSystem/HotelManagementSystem.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\otvoreno_oko.png" />
     <Resource Include="Resources\zatvoreno_oko.png" />
   </ItemGroup>
